--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(scenario_jointBLRM)
 export(scenario_list_covariate_jointBLRM)
 export(scenario_list_jointBLRM)
 export(sim_binomial_betamix)
+export(sim_covariate_jointBLRM)
 export(sim_jointBLRM)
 import(Rcpp)
 import(flock)
