bug fix after first test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(get_pred_tox)
 export(get_pred_tox_mono)
 export(inv_logit)
 export(logit)
+export(scenario_covariate_jointBLRM)
 export(scenario_jointBLRM)
 export(scenario_list_covariate_jointBLRM)
 export(scenario_list_jointBLRM)
