--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -63,5 +63,7 @@ LinkingTo:
 SystemRequirements: GNU make
 Suggests: 
     rmarkdown,
-    knitr
+    knitr,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
