Started to create sim_jointBLRM functions running on slurm clusters with arbitrarily many cores

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,9 @@ export(scenario_list_jointBLRM)
 export(sim_binomial_betamix)
 export(sim_covariate_jointBLRM)
 export(sim_jointBLRM)
+export(sim_jointBLRM_par)
 import(Rcpp)
+import(doRNG)
 import(flock)
 import(ggplot2)
 import(methods)
