Parallel covariate simulations and new version number updates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(scenario_list_covariate_jointBLRM)
 export(scenario_list_jointBLRM)
 export(sim_binomial_betamix)
 export(sim_covariate_jointBLRM)
+export(sim_covariate_jointBLRM_par)
 export(sim_jointBLRM)
 export(sim_jointBLRM_par)
 import(Rcpp)
