--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,8 +52,7 @@ Imports:
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
-    rstantools (>= 2.1.1),
-    RBesT (>= 1.6-1)
+    rstantools (>= 2.1.1)
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
