Update for parallel backend checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ import(openxlsx)
 importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(foreach,getDoParRegistered)
 importFrom(foreach,registerDoSEQ)
 importFrom(grDevices,cairo_pdf)
 importFrom(gridExtra,grid.arrange)
