Updates to seed in parallel covariate simulations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,14 +17,11 @@ export(sim_jointBLRM_par)
 import(Rcpp)
 import(doRNG)
 import(flock)
+import(foreach)
 import(ggplot2)
 import(methods)
 import(openxlsx)
 importFrom(doParallel,registerDoParallel)
-importFrom(foreach,"%dopar%")
-importFrom(foreach,foreach)
-importFrom(foreach,getDoParRegistered)
-importFrom(foreach,registerDoSEQ)
 importFrom(grDevices,cairo_pdf)
 importFrom(gridExtra,grid.arrange)
 importFrom(openssl,sha256)
