--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,4 +33,4 @@ importFrom(stats,quantile)
 importFrom(stats,rbinom)
 importFrom(stats,sd)
 importFrom(utils,write.table)
-useDynLib(OncoBLRM, .registration = TRUE)
+useDynLib(decider, .registration = TRUE)
