Name update for par functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ export(scenario_covariate_jointBLRM)
 export(scenario_jointBLRM)
 export(scenario_list_covariate_jointBLRM)
 export(scenario_list_jointBLRM)
-export(sim_covariate_jointBLRM_par)
-export(sim_jointBLRM_par)
+export(sim_covariate_jointBLRM)
+export(sim_jointBLRM)
 import(Rcpp)
 import(doRNG)
 import(flock)
