--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Description: Provides functions that allow to compute posterior distributions of
   <doi:10.1080/19466315.2016.1174149>), and a variant with an additional binary 
   covariate. All Bayesian models are evaluated using the 'Stan' modeling language 
   via the package 'rstan', refer to Stan Development Team (2020) <https://mc-stan.org>.
-License: GPL (>= 3)
+License: Apache License (>= 2)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
