Added lifecycle + cosmetic changes to vignettes/pkgdown page

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,5 @@
 url: https://lschroeter.github.io/decider/
 template:
   bootstrap: 5
+  assets: ../vignettes/scenario-plots-1.png, ../vignettes/scenario-plots-2.png
 
