--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,8 +6,8 @@ Authors@R:
            family = "Schroeter",
            role = c("aut", "cre"),
            email = "lukas.schroeter@boehringer-ingelheim.com")
-      ,person(given = "Maier",
-           family = "Daniela",
+      ,person(given = "Daniela",
+           family = "Maier",
            role = c("ctb"),
            email = "daniela_2.maier@boehringer-ingelheim.com")
       ,person(given = "Boehringer Ingelheim",
@@ -50,7 +50,8 @@ Imports:
     Rcpp (>= 0.12.0),
     RcppParallel (>= 5.0.1),
     rstan (>= 2.18.1),
-    rstantools (>= 2.1.1)
+    rstantools (>= 2.1.1),
+    lifecycle
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
