--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://lschroeter.github.io/decider/
+url: https://Boehringer-Ingelheim.github.io/decider/
 template:
   bootstrap: 5
   assets: articles/scenario-plots-1.png, articles/scenario-plots-2.png
