--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,4 +66,4 @@ Suggests:
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
-URL: https://lschroeter.github.io/decider/
+URL: https://Boehringer-Ingelheim.github.io/decider/
