Updated URLs to and figure links in pkgdown page

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ import(openxlsx)
 importFrom(doParallel,registerDoParallel)
 importFrom(grDevices,cairo_pdf)
 importFrom(gridExtra,grid.arrange)
+importFrom(lifecycle,deprecated)
 importFrom(openssl,sha256)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
